// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InlineNotification should render with danger styles 1`] = `
.circuit-0 {
  color: #FF7559;
  position: relative;
  margin-bottom: 16px;
}

.circuit-0:before {
  display: inline-block;
  border-top-right-radius: 5px;
  border-bottom-right-radius: 5px;
  content: '';
  position: absolute;
  left: -24px;
  top: 0;
  height: 100%;
  background-color: #FF7559;
  width: 3px;
}

<p
  className="circuit-0 circuit-1"
  size="giga"
  type="danger"
/>
`;

exports[`InlineNotification should render with default styles 1`] = `
<p
  className="circuit-0 circuit-1"
  size="giga"
/>
`;

exports[`InlineNotification should render with giga spacing 1`] = `
.circuit-0 {
  color: #FF7559;
  position: relative;
  margin-bottom: 16px;
}

.circuit-0:before {
  display: inline-block;
  border-top-right-radius: 5px;
  border-bottom-right-radius: 5px;
  content: '';
  position: absolute;
  left: -24px;
  top: 0;
  height: 100%;
  background-color: #FF7559;
  width: 3px;
}

<p
  className="circuit-0 circuit-1"
  size="giga"
  type="danger"
/>
`;

exports[`InlineNotification should render with success styles 1`] = `
.circuit-0 {
  color: #49B85B;
  position: relative;
  margin-bottom: 16px;
}

.circuit-0:before {
  display: inline-block;
  border-top-right-radius: 5px;
  border-bottom-right-radius: 5px;
  content: '';
  position: absolute;
  left: -24px;
  top: 0;
  height: 100%;
  background-color: #49B85B;
  width: 3px;
}

<p
  className="circuit-0 circuit-1"
  size="giga"
  type="success"
/>
`;

exports[`InlineNotification should render with warning styles 1`] = `
.circuit-0 {
  color: #D4A546;
  position: relative;
  margin-bottom: 16px;
}

.circuit-0:before {
  display: inline-block;
  border-top-right-radius: 5px;
  border-bottom-right-radius: 5px;
  content: '';
  position: absolute;
  left: -24px;
  top: 0;
  height: 100%;
  background-color: #D4A546;
  width: 3px;
}

<p
  className="circuit-0 circuit-1"
  size="giga"
  type="warning"
/>
`;
